crates/strider/tests/snapshots/x86_kernel__stack__escape_via_ptr.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401120:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "7" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xfffffffffffffffffffffffffffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "15" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x401113:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "18" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
